# qt5integration

./: .clog.toml  .gitignore  .packit.yaml  .qmake.conf  .release.json  .syncexclude  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  clog.toml  linglong.yaml  qt5integration.pro
.reuse/: dep5
archlinux/: PKGBUILD
ddestyleplugin/: darkstyle.cpp  darkstyle.h  ddestyleplugin.cpp  ddestyleplugin.h  ddestyleplugin.pro  lightstyle.cpp  lightstyle.h
debian/: api.json  changelog  control  copyright  dde-qt5integration.install  dde-qt5integration5.6.install  dde-qt6integration.install  rules
dstyleplugin/: assets.qrc  assets_dark.qrc  assets_light.qrc  assets_semidark.qrc  assets_semilight.qrc  brushchemes.qrc  checkboxhelper.cpp  colorschemes.qrc  colorutils.cpp  colorutils.h  comboboxhelper.cpp  common.h  commonhelper.cpp  commonhelper.h  ddarkstyle.cpp  ddarkstyle.h  dlightstyle.cpp  dlightstyle.h  dstyleanimation.h  dstyleplugin.cpp  dstyleplugin.h  dstyleplugin.json  dstyleplugin.pro  framehelper.cpp  framehelper.h  geometryutils.cpp  geometryutils.h  headerviewhelper.cpp  hidpihelper.cpp  hidpihelper.h  lineedithelper.cpp  lineedithelper.h  menuhelper.cpp  painterhelper.cpp  painterhelper.h  paletteextended.cpp  paletteextended.h  progressbarhelper.cpp  pushbuttonhelper.cpp  pushbuttonhelper.h  (+11 more)
iconengineplugins/: CMakeLists.txt  iconengines.pro
iconengineplugins/builtinengine/: CMakeLists.txt  builtinengine.json  builtinengine.pro  dbuiltiniconengine.cpp  dbuiltiniconengine.h  main.cpp
iconengineplugins/dciiconengine/: CMakeLists.txt  dciiconengine.cpp  dciiconengine.h  dciiconengine.json  dciiconengine.pro  main.cpp
iconengineplugins/diconengine/: CMakeLists.txt  diconengine.json  main.cpp
iconengineplugins/diconproxyengine/: CMakeLists.txt  diconproxyengine.cpp  diconproxyengine.h  diconproxyengine.json  diconproxyengine.pro  main.cpp
iconengineplugins/svgiconengine/: CMakeLists.txt  main.cpp  qsvgiconengine.cpp  qsvgiconengine.h  svgiconengine.pro
iconengineplugins/xdgiconproxyengine/: CMakeLists.txt  main.cpp  xdgiconproxyengine.cpp  xdgiconproxyengine.h  xdgiconproxyengine.pro  xdgproxyiconplugin.json
imageformatplugins/: CMakeLists.txt  imageformats.pro
imageformatplugins/svg/: CMakeLists.txt  main.cpp  qsvgiohandler.cpp  qsvgiohandler.h  svg.pro
platformplugin/: LICENSE  README.md  dforeignplatformwindow.h  dforeignplatformwindow_x11.cpp  dframewindow.cpp  dframewindow.h  dplatformbackingstore.cpp  dplatformbackingstore.h  dplatformbackingstorehelper.cpp  dplatformbackingstorehelper.h  dplatformintegration.cpp  dplatformintegration.h  dpp.json  (+33 more)
platformthemeplugin/: CMakeLists.txt  dbuiltiniconengine.cpp  ddbustrayicon.cpp  ddbustrayicon.h  deepin.json  diconengine.cpp  diconengine.h  diconproxyengine.cpp  diconproxyengine.h  dprivateaccessor_p.h  dthemesettings.cpp  dthemesettings.h  main.cpp  menu.qss  qdeepinfiledialoghelper.cpp  qdeepinfiledialoghelper.h  qdeepinplatformmenu.cpp  qdeepinplatformmenu.h  qdeepinplatformmenuitem.cpp  qdeepinplatformmenuitem.h  qdeepintheme.cpp  qdeepintheme.h  qt5deepintheme-plugin.pro  theme.qrc  xdgiconenginecreator.cpp  xdgiconenginecreator.h
platformthemeplugin/config.tests/dthemed_icon_lookup/: CMakeLists.txt  dthemed_icon_lookup.pro  main.cpp
platformthemeplugin/icon-theme/: deepin-icon-theme.qrc  index.theme
platformthemeplugin/icons/: deepin-theme-plugin-icons.qrc
platformthemeplugin/images/: README
platformthemeplugin/xmls/: com.deepin.filemanager.filedialog.xml
platformthemeplugins/deepinfiledialogtheme/: CMakeLists.txt  deepinfiledialog.json  main.cpp  qdeepintheme.cpp  qdeepintheme.h
styleplugins/chameleon/: CMakeLists.txt  chameleon.json  chameleon.pro  chameleonstyle.cpp  chameleonstyle.h  common.h  drawutils.cpp  drawutils.h  dstyleanimation.cpp  dstyleanimation.h  main.cpp  resources.qrc
styleplugins/dstyleplugin/: CMakeLists.txt  assets.qrc  assets_semidark.qrc  assets_semilight.qrc  brushchemes.qrc  checkboxhelper.cpp  colorutils.cpp  colorutils.h  comboboxhelper.cpp  common.h  commonhelper.cpp  commonhelper.h  dstyleanimation.cpp  dstyleanimation.h  dstyleplugin.cpp  dstyleplugin.h  dstyleplugin.json  dstyleplugin.pro  framehelper.cpp  geometryutils.cpp  geometryutils.h  headerviewhelper.cpp  hidpihelper.cpp  hidpihelper.h  lineedithelper.cpp  menuhelper.cpp  painterhelper.cpp  painterhelper.h  paletteextended.cpp  paletteextended.h  progressbarhelper.cpp  pushbuttonhelper.cpp  rubberbandhelper.cpp  scrollbarhelper.cpp  sliderhelper.cpp  spinboxhelper.cpp  style.cpp  style.h  tabbarhelper.cpp  tabwidgethelper.cpp  (+1 more)
styleplugins/dstyleplugin/brushschemes/: ddark.css  dlight.css
styleplugins/dstyleplugin/config.tests/dtkwidget/: main.cpp
styles/: CMakeLists.txt  main.cpp  norwegianwoodstyle.cpp  norwegianwoodstyle.h  styles.pro  widgetgallery.cpp  widgetgallery.h
tests/: CMakeLists.txt  main.cpp  test-coverage.sh  test-recoverage-qmake.sh  tests.pro  ut_pluginloading.cpp
tests/iconengines/: iconengines.cmake  iconengines.pri
tests/iconengines/builtinengine/: builtinengine.cmake  builtinengine.pri  gts_builtinengine.cpp  ut_builtinengine.cpp
tests/iconengines/builtinengine/icons/: theme-icons.qrc
tests/iconengines/dciiconengine/: dciiconengine.pri  ut_dciiconengine.cpp
tests/iconengines/dciiconengine/icons/: d_ut_dci_res.qrc  dtk_dci_test_res.qrc  res.qrc
tests/iconengines/svgiconengine/: icons.qrc  svgiconengine.cmake  svgiconengine.pri  ut_qsvgiconengine.cpp
tests/imageformats/: imageformats.cmake  imageformats.pri
tests/imageformats/dci/: dci.pri  dci_test_files.qrc  radio_checked.dci  ut_qdciiohandler.cpp
tests/imageformats/svg/: svg.cmake  svg.pri  ut_qsvgiohandler.cpp
tests/platformtheme/: filedialogmanagerservice.cpp  filedialogmanagerservice.h  filedialogservice.cpp  filedialogservice.h  qt-theme.ini  test-files.qrc  ut_dthemesettings.cpp  ut_qdeepinfiledialoghelper.cpp  ut_qdeepintheme.cpp
tests/styleplugins/: styleplugins.cmake  styleplugins.pri
tests/styleplugins/chameleon/: chameleon.cmake  chameleon.pri  ut_chameleonstyle.cpp
(+79 files in other folders)
